deploy/resources/backend-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: plancia
  namespace: plancia
  labels:
    app: plancia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plancia
  template:
    metadata:
      labels:
        app: plancia
    spec:
      serviceAccountName: plancia
      containers:
        - name: plancia
          image: ghcr.io/navarcos/plancia-backend:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: host-ca-certs
              mountPath: /etc/ssl/certs/
              readOnly: true
          ports:
            - containerPort: 8080
      volumes:
        - name: host-ca-certs
          hostPath:
            path: /etc/ssl/certs/
            type: Directory
      imagePullSecrets:
        - name: harbor-registry-secret
