deploy/resources/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plancia-ui-ingress
  namespace: plancia
  annotations:
    cert-manager.io/cluster-issuer: navarcos-ca-issuer
    nginx.ingress.kubernetes.io/service-upstream: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - plancia.172.18.0.2.nip.io
      secretName: plancia-frontend-tls
  rules:
    - host: plancia.172.18.0.2.nip.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: plancia-ui
                port:
                  number: 80
